# eco-log

./: .gitignore  CLAUDE.md  app.py  pyproject.toml
data/: material_map.json
src/: __init__.py  calculator.py  matcher.py  parser.py
