[project]
name = "eco-log"
version = "0.1.0"
description = "Environmental Impact Calculator for HiCAD model exports"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.18.0",
    "extra-streamlit-components>=0.1.60",
]

[tool.uv]
dev-dependencies = []
